Update new reference

--- a/hinnasto.html
+++ b/hinnasto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Mar 18 2024 07:36:44 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Mar 29 2024 10:50:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded606e3" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -152,7 +152,7 @@
                 </div>
               </div>
               <div class="default-state">
-                <a href="https://www.nords-logot.fi/" target="_blank" class="button w-button">Tutustu referensseihin</a>
+                <a href="https://logo.nords.fi/" target="_blank" class="button w-button">Tutustu referensseihin</a>
                 <a href="ota-yhteytta" class="button w-button">Ota yhteyttä</a>
               </div>
             </div>
