--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Mar 18 2024 07:36:44 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Mar 29 2024 10:50:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded6061f" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -263,7 +263,7 @@
                 </div>
               </div>
               <div class="default-state">
-                <a href="https://www.nords-logot.fi/" target="_blank" class="button w-button">Tutustu referensseihin</a>
+                <a href="https://logo.nords.fi/" target="_blank" class="button w-button">Tutustu referensseihin</a>
                 <a href="ota-yhteytta" class="button w-button">Ota yhteyttä</a>
               </div>
             </div>
@@ -544,15 +544,15 @@
         </div>
         <div class="margin-70px">
           <div class="w-layout-grid client-grid">
-            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5439b-ded6061f" class="client-card">
-              <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-helsinginkulta.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-helsinginkulta-p-500.webp 500w, images/mockup-helsinginkulta-p-800.webp 800w, images/mockup-helsinginkulta-p-1080.webp 1080w, images/mockup-helsinginkulta-p-1600.webp 1600w, images/mockup-helsinginkulta.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Helsingin Kullan verkkosivut." class="client-image"></a>
+            <div id="w-node-_644b08bb-2928-540c-1c09-cf11f878c589-ded6061f" class="client-card">
+              <a href="referenssi/finhem-oy" class="client-image w-inline-block"><img src="images/mockup-finhem.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-finhem.webp 500w, images/mockup-finhem.webp 800w, images/mockup-finhem.webp 1080w, images/mockup-finhem.webp 1600w" alt="FINHEM Oy verkkosivut tietokoneella" class="client-image"></a>
               <div class="client-content add-shadow">
                 <div class="category-felx">
-                  <a href="#" class="category-tag">10/2023</a>
+                  <a href="referenssi/finhem-oy" class="category-tag">03/2024</a>
                 </div>
-                <a href="referenssi/helsingin-kulta" class="client-title">Helsingin Kulta</a>
+                <a href="referenssi/finhem-oy" class="client-title">FINHEM Oy</a>
                 <div class="margin-20px">
-                  <a href="referenssi/helsingin-kulta" class="button-line w-inline-block">
+                  <a href="referenssi/finhem-oy" class="button-line w-inline-block">
                     <div>
                       <div>Lue lisää</div>
                       <div class="button-line-button">
@@ -563,15 +563,15 @@
                 </div>
               </div>
             </div>
-            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5438b-ded6061f" class="client-card">
-              <a href="referenssi/valaistus-mk-oy" class="client-image w-inline-block"><img src="images/mockup-valaistusmk.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-valaistusmk-p-500.webp 500w, images/mockup-valaistusmk-p-800.webp 800w, images/mockup-valaistusmk-p-1080.webp 1080w, images/mockup-valaistusmk-p-1600.webp 1600w, images/mockup-valaistusmk.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Valaistus MK:n verkkosivut." class="client-image"></a>
+            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5439b-ded6061f" class="client-card">
+              <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-helsinginkulta.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-helsinginkulta-p-500.webp 500w, images/mockup-helsinginkulta-p-800.webp 800w, images/mockup-helsinginkulta-p-1080.webp 1080w, images/mockup-helsinginkulta-p-1600.webp 1600w, images/mockup-helsinginkulta.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Helsingin Kullan verkkosivut." class="client-image"></a>
               <div class="client-content add-shadow">
                 <div class="category-felx">
-                  <a href="#" class="category-tag">09/2023</a>
+                  <a href="#" class="category-tag">10/2023</a>
                 </div>
-                <a href="referenssi/valaistus-mk-oy" class="client-title">Valaistus MK Oy</a>
+                <a href="referenssi/helsingin-kulta" class="client-title">Helsingin Kulta</a>
                 <div class="margin-20px">
-                  <a href="referenssi/valaistus-mk-oy" class="button-line w-inline-block">
+                  <a href="referenssi/helsingin-kulta" class="button-line w-inline-block">
                     <div>
                       <div>Lue lisää</div>
                       <div class="button-line-button">
