--- a/referenssi/hautaustoimisto-rauha-oy.html
+++ b/referenssi/hautaustoimisto-rauha-oy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Mar 18 2024 07:36:44 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Mar 29 2024 10:50:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded606d0" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -117,7 +117,7 @@
             <div class="absolute-background"></div>
           </div>
           <div class="margin-50px w-richtext">
-            <p>Hautaustoimisto Rauha Oy on perheyritys, joka tarjoaa kattavia hautauspalveluita. Loimme heille verkkosivut, jotka heijastavat heidän kunnioittavaa ja huomaavaista palvelua vaikeina hetkinä. Yhteistyömme Hautaustoimisto Rauha Oy:b kanssa on ollut menestyksekäs, ja olemme iloisia siitä, että olemme voineet auttaa heitä vahvistamaan digitaalista läsnäoloaan.</p>
+            <p>Hautaustoimisto Rauha Oy on perheyritys, joka tarjoaa kattavia hautauspalveluita. Loimme heille verkkosivut, jotka heijastavat heidän kunnioittavaa ja huomaavaista palvelua vaikeina hetkinä. Yhteistyömme Hautaustoimisto Rauha Oy:n kanssa on ollut menestyksekäs, ja olemme iloisia siitä, että olemme voineet auttaa heitä vahvistamaan digitaalista läsnäoloaan.</p>
             <p>Pääset tutustumaan yrityksen sivuihin <a href="https://www.rauhanhautaus.fi" target="_blank">tästä!</a>
             </p>
           </div>
