--- a/referenssit.html
+++ b/referenssit.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Mar 18 2024 07:36:44 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Mar 29 2024 10:50:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded6074d" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -127,8 +127,27 @@
         <div class="container">
           <div class="margin-bottom-80px">
             <div class="w-layout-grid client-grid">
-              <div id="w-node-a5804b4c-ec13-71fd-6d04-6df09bbd79f5-ded6074d" class="client-card hide">
-                <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-rauhanhautaus.webp" loading="lazy" sizes="(max-width: 479px) 0px, 100vw" srcset="images/mockup-rauhanhautaus-p-500.webp 500w, images/mockup-rauhanhautaus-p-800.webp 800w, images/mockup-rauhanhautaus-p-1080.webp 1080w, images/mockup-rauhanhautaus-p-1600.webp 1600w, images/mockup-rauhanhautaus.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Hautaustoimisto Rauha Oy:n verkkosivut." class="client-image"></a>
+              <div id="w-node-a5804b4c-ec13-71fd-6d04-6df09bbd79f5-ded6074d" class="client-card">
+                <a href="referenssi/finhem-oy" class="client-image w-inline-block"><img src="images/mockup-finhem.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-finhem.webp 500w, images/mockup-finhem.webp 800w, images/mockup-finhem.webp 1080w, images/mockup-finhem.webp 1600w" alt="FINHEM Oy verkkosivut tietokoneella" class="client-image"></a>
+                <div class="client-content add-shadow">
+                  <div class="category-felx">
+                    <a href="referenssi/finhem-oy" class="category-tag">03/2024</a>
+                  </div>
+                  <a href="referenssi/finhem-oy" class="client-title">FINHEM Oy</a>
+                  <div class="margin-20px">
+                    <a href="referenssi/finhem-oy" class="button-line w-inline-block">
+                      <div>
+                        <div>Lue lisää</div>
+                        <div class="button-line-button">
+                          <div class="button-absolute-line"></div>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div id="w-node-_85698372-c768-79a0-e56b-21e54ad62dd6-ded6074d" class="client-card">
+                <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-rauhanhautaus.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-rauhanhautaus-p-500.webp 500w, images/mockup-rauhanhautaus-p-800.webp 800w, images/mockup-rauhanhautaus-p-1080.webp 1080w, images/mockup-rauhanhautaus-p-1600.webp 1600w, images/mockup-rauhanhautaus.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Hautaustoimisto Rauha Oy:n verkkosivut." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
                     <a href="#" class="category-tag">11/2023</a>
@@ -269,25 +288,6 @@
                   <a href="referenssi/vorrios-oy" class="client-title">Vorrios Oy</a>
                   <div class="margin-20px">
                     <a href="referenssi/vorrios-oy" class="button-line w-inline-block">
-                      <div>
-                        <div>Lue lisää</div>
-                        <div class="button-line-button">
-                          <div class="button-absolute-line"></div>
-                        </div>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div id="w-node-_0d4d21f1-4459-7cf4-fc44-d97fe460a89e-ded6074d" class="client-card">
-                <a href="referenssi/verawrites" class="client-image w-inline-block"><img src="images/verawrites.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/verawrites-p-500.webp 500w, images/verawrites-p-800.webp 800w, images/verawrites-p-1080.webp 1080w, images/verawrites.webp 1600w" alt="Yrityksen Verawrites kotisivut auki tietokoneella ja matkapuhelimella." class="client-image"></a>
-                <div class="client-content add-shadow">
-                  <div class="category-felx">
-                    <a href="#" class="category-tag">01/2023</a>
-                  </div>
-                  <a href="referenssi/verawrites" class="client-title">Verawrites</a>
-                  <div class="margin-20px">
-                    <a href="referenssi/verawrites" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
