--- a/referenssi/finhem-oy.html
+++ b/referenssi/finhem-oy.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><!--  Last Published: Mon Mar 18 2024 07:36:44 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="65a683dc387d6f72ded60756" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
+<!DOCTYPE html><!--  Last Published: Fri Mar 29 2024 10:50:05 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="66068748b796461e92b665c9" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Verawrites kotisivut - Nords Oy</title>
-  <meta content="Verawrites kotisivut - Nords Oy" property="og:title">
-  <meta content="Verawrites kotisivut - Nords Oy" property="twitter:title">
+  <title>FINHEM Oy</title>
+  <meta content="FINHEM Oy" property="og:title">
+  <meta content="FINHEM Oy" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/components.css" rel="stylesheet" type="text/css">
@@ -16,7 +16,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.jpg" rel="apple-touch-icon">
-  <link href="https://www.nords.fi/referenssi/verawrites" rel="canonical">
+  <link href="https://www.nords.fi/referenssi/finhem-oy" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-PSLMFQDWYR');</script>
   <meta name="robots" content="noindex">
@@ -89,17 +89,17 @@
         </div>
       </div>
     </header>
-    <div class="hero inner _2">
+    <div id="up" class="hero inner _2">
       <div class="container">
         <div class="hero-grid _2">
-          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f56-ded60756" class="part-2 center">
+          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f56-92b665c9" class="part-2 center">
             <div class="hero-flex-center">
-              <h1 class="hero-display">Verawrites</h1>
+              <h1 class="hero-display hautaus-toimisto-rauha-oy">FINHEM Oy</h1>
             </div>
           </div>
-          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f5a-ded60756" class="part-1 _2">
+          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f5a-92b665c9" class="part-1 _2">
             <div class="hero-flex-center left _3">
-              <p class="paragraph-1 second">03/2023</p>
+              <p class="paragraph-1 second">03/2024</p>
             </div>
           </div>
         </div>
@@ -113,16 +113,12 @@
     <div class="section">
       <div class="container">
         <div class="blog-rich-text">
-          <div class="photo-animation-main"><img src="../images/verawrites.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/verawrites-p-500.webp 500w, ../images/verawrites-p-800.webp 800w, ../images/verawrites-p-1080.webp 1080w, ../images/verawrites.webp 1600w" alt="Yrityksen Verawrites kotisivut auki tietokoneella ja matkapuhelimella." class="photo">
+          <div class="photo-animation-main"><img src="../images/mockup-finhem.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/mockup-finhem.webp 500w, ../images/mockup-finhem.webp 800w, ../images/mockup-finhem.webp 1080w, ../images/mockup-finhem.webp 1600w" alt="FINHEM Oy verkkosivut tietokoneella" class="photo">
             <div class="absolute-background"></div>
           </div>
           <div class="margin-50px w-richtext">
-            <p>Vera on kokenut kääntäjä ja tekstin editoija, joka tarjoaa monipuolisia palveluita, kuten copyeditingiä ja -writingiä, rakenteellisia muokkauksia sekä suomesta englanniksi kääntämistä. Yhdessä asiakkaamme kanssa olemme luoneet upeat sivut, jotka esittelevät Veran monipuolista erikoisosaamista.</p>
-            <p>Projektin aikana keskityimme korkealaatuisen sisällön ja käyttökokemuksen luomiseen. Tavoitteena oli luoda helppokäyttöinen ja informatiivinen verkkosivusto, joka korostaa Veran ammattitaitoa ja palveluiden monipuolisuutta.</p>
-            <p>‍</p>
-            <blockquote>&quot;Sivujen ulkoasu on kaunis ja selkeä, ja navigointi on helppoa ja käyttäjäystävällistä.&quot;</blockquote>
-            <p>‍</p>
-            <p>Verawrites.fi on ammattimaisesti suunniteltu ja toteutettu kotisivuprojekti, joka on suunniteltu vastaamaan kääntäjien ja tekstin editoijien tarpeita. Olemme ylpeitä saavutetusta lopputuloksesta ja uskomme, että uudet kotisivut antavat Veran yritykselle täysin uuden ilmeen. Voit käydä tutustumassa sivuihin klikkaamalla <a href="https://www.verawrites.fi/" target="_blank">tästä!</a>
+            <p>FINHEM Oy on Uudenmaan alueella toimiva paikallinen perheyritys, joka tarjoaa monipuolisia kodin palveluita Loimme heille verkkosivut, jotka heijastavat heidän laadukasta ja ammattitaitoista palvelua rakennusalalla. Yhteistyömme FINHEM Oy:n kanssa on ollut menestyksekäs, ja olemme iloisia siitä, että olemme voineet auttaa heitä vahvistamaan digitaalista läsnäoloaan.</p>
+            <p>Pääset tutustumaan yrityksen sivuihin <a href="https://www.finhem.fi" target="_blank">tästä!</a>
             </p>
           </div>
         </div>
@@ -146,15 +142,15 @@
           </div>
           <div class="margin-40px">
             <div class="w-layout-grid client-grid">
-              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f85-ded60756" class="client-card">
-                <a href="../referenssi/ficia-oy" class="client-image w-inline-block"><img src="../images/ficia.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/ficia-p-500.webp 500w, ../images/ficia-p-800.webp 800w, ../images/ficia-p-1080.webp 1080w, ../images/ficia.webp 1600w" alt="Yrityksen Ficia Oy kotisivut auki tietokoneella ja matkapuhelimella." class="client-image"></a>
+              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f95-92b665c9" class="client-card">
+                <a href="../referenssi/valaistus-mk-oy" class="client-image w-inline-block"><img src="../images/mockup-valaistusmk.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/mockup-valaistusmk-p-500.webp 500w, ../images/mockup-valaistusmk-p-800.webp 800w, ../images/mockup-valaistusmk-p-1080.webp 1080w, ../images/mockup-valaistusmk-p-1600.webp 1600w, ../images/mockup-valaistusmk.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Valaistus MK:n verkkosivut." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
-                    <a href="#" class="category-tag">04/2023</a>
+                    <a href="#" class="category-tag">09/2023</a>
                   </div>
-                  <a href="../referenssi/ficia-oy" class="client-title">Ficia Oy</a>
+                  <a href="../referenssi/valaistus-mk-oy" class="client-title">Valaistus MK Oy</a>
                   <div class="margin-20px">
-                    <a href="../referenssi/ficia-oy" class="button-line w-inline-block">
+                    <a href="../referenssi/valaistus-mk-oy" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
@@ -165,15 +161,15 @@
                   </div>
                 </div>
               </div>
-              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f95-ded60756" class="client-card">
-                <a href="../referenssi/vorrios-oy" class="client-image w-inline-block"><img src="../images/vorrios.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/vorrios-p-500.webp 500w, ../images/vorrios-p-800.webp 800w, ../images/vorrios-p-1080.webp 1080w, ../images/vorrios.webp 1600w" alt="Yrityksen Vorrios Oy kotisivut auki tietokoneella ja matkapuhelimella." class="client-image"></a>
+              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f85-92b665c9" class="client-card">
+                <a href="../referenssi/lannentilan-leipomo" class="client-image w-inline-block"><img src="../images/lannentilan-leipomo-mockup.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/lannentilan-leipomo-mockup-p-500.webp 500w, ../images/lannentilan-leipomo-mockup-p-800.webp 800w, ../images/lannentilan-leipomo-mockup-p-1080.webp 1080w, ../images/lannentilan-leipomo-mockup-p-1600.webp 1600w, ../images/lannentilan-leipomo-mockup.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Lännentilan leipomon verkkosivut." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
-                    <a href="#" class="category-tag">08/2022</a>
+                    <a href="#" class="category-tag">08/2023</a>
                   </div>
-                  <a href="../referenssi/vorrios-oy" class="client-title">Vorrios Oy</a>
+                  <a href="../referenssi/lannentilan-leipomo" class="client-title">Lännentilan Leipomo Oy</a>
                   <div class="margin-20px">
-                    <a href="../referenssi/vorrios-oy" class="button-line w-inline-block">
+                    <a href="../referenssi/lannentilan-leipomo" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
@@ -266,7 +262,7 @@
         </div>
       </div><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/631767f79e39ffdfbe0a63c5_sammy-line-three-black-lines-1.svg" loading="lazy" alt="" class="airplane-image _1">
     </footer>
-    <a href="#" class="go-top w-inline-block">
+    <a href="#up" class="go-top w-inline-block">
       <div>Ylös</div>
     </a>
   </div>
