Update pricing and web content

--- a/hinnasto.html
+++ b/hinnasto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Mar 29 2024 10:50:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Mar 30 2024 10:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded606e3" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -130,7 +130,7 @@
                 <div class="pricing-circle"></div><img src="images/logot.svg" loading="lazy" alt="Harmaa ikoni, jossa kirjaimet NDM selaimen sisällä." class="pricing-image">
               </a><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390b58b5c0b4ab5a5c7623c_simple_logo_icon-cropped.svg" loading="lazy" alt="" class="service-title">
               <h3 class="pricing-type">Logon suunnittelu</h3>
-              <div class="pricing-title no-margin">€ 149.00 <span class="alv">+ alv. 24%<br></span></div>
+              <div class="pricing-title no-margin">€ 199.00 <span class="alv">+ alv. 24%<br></span></div>
               <div class="pricing-features">
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
                   <div class="feature">Logon suunnittelu</div>
@@ -161,7 +161,7 @@
                 <div class="pricing-circle"></div><img src="images/kotisivu.svg" loading="lazy" alt="Harmaa ikoni, jossa tekstiä ja NDM selaimen sisällä." class="pricing-image">
               </a>
               <h3 class="pricing-type">Kotisivujen kehitys</h3><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390bb6499e2d11391d1ec82_all_in_icon-cropped.svg" loading="lazy" alt="" class="service-title fixed">
-              <div class="pricing-title no-margin">€ 399.00 <span class="alv">+ alv. 24%</span></div>
+              <div class="pricing-title no-margin">€ 499.00 <span class="alv">+ alv. 24%</span></div>
               <div class="pricing-features">
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
                   <div class="feature">Kotisivut tarpeidesi mukaan</div>
@@ -195,7 +195,7 @@
                 <div class="pricing-circle"></div><img src="images/logosivut.svg" loading="lazy" alt="" class="pricing-image">
               </a>
               <h3 class="pricing-type">Logo + kotisivut</h3><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390bb2281ed7f01a39de227_all_in_logo-cropped.svg" loading="lazy" alt="" class="service-title">
-              <div class="pricing-title no-margin">€ 499.00 <span class="alv">+ alv. 24%</span></div>
+              <div class="pricing-title no-margin">€ 599.00 <span class="alv">+ alv. 24%</span></div>
               <div class="pricing-features">
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
                   <div class="feature">Logon suunnittelu</div>
@@ -302,7 +302,7 @@
           <div class="top-divider">
             <div class="category-tag _2">Ole meihin yhteydessä!<br></div>
           </div>
-          <h3 class="display-1">Olemme valmiina hommiin!<strong><br></strong></h3>
+          <h3 class="display-1 larger">Olemme valmiina hommiin!<strong><br></strong></h3>
           <div class="margin-40px">
             <p class="subhead">Luodaan jotain ainutlaatuista.</p>
           </div>
@@ -324,7 +324,7 @@
           <div class="footer-grid">
             <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c4996-f17c497c"><img src="images/ndm-cropped.png" loading="lazy" width="70" sizes="(max-width: 479px) 100vw, 140px" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w" class="logo-footer">
               <div class="margin-30px">
-                <p class="paragraph-footer">Nords on suomalainen brändäys ja digitoimisto sitoutunut tuottamaan vain ja ainoastaan markkinoiden huippulaatua.</p>
+                <p class="paragraph-footer">Visioi. Luo. Saavuta.</p>
               </div>
               <div class="margin-30px">
                 <div class="navigation-flex">
