--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Mar 29 2024 10:50:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Mar 30 2024 10:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded6061f" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -241,7 +241,7 @@
                 <div class="pricing-circle"></div><img src="images/logot.svg" loading="lazy" alt="Harmaa ikoni, jossa kirjaimet NDM selaimen sisällä." class="pricing-image">
               </a><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390b58b5c0b4ab5a5c7623c_simple_logo_icon-cropped.svg" loading="lazy" alt="" class="service-title">
               <h3 class="pricing-type">Logon suunnittelu</h3>
-              <div class="pricing-title no-margin">€ 149.00 <span class="alv">+ alv. 24%<br></span></div>
+              <div class="pricing-title no-margin">€ 199.00 <span class="alv">+ alv. 24%<br></span></div>
               <div class="pricing-features">
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
                   <div class="feature">Logon suunnittelu</div>
@@ -272,7 +272,7 @@
                 <div class="pricing-circle"></div><img src="images/kotisivu.svg" loading="lazy" alt="Harmaa ikoni, jossa tekstiä ja NDM selaimen sisällä." class="pricing-image">
               </a>
               <h3 class="pricing-type">Kotisivujen kehitys</h3><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390bb6499e2d11391d1ec82_all_in_icon-cropped.svg" loading="lazy" alt="" class="service-title fixed">
-              <div class="pricing-title no-margin">€ 399.00 <span class="alv">+ alv. 24%</span></div>
+              <div class="pricing-title no-margin">€ 499.00 <span class="alv">+ alv. 24%</span></div>
               <div class="pricing-features">
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
                   <div class="feature">Kotisivut tarpeidesi mukaan</div>
@@ -306,7 +306,7 @@
                 <div class="pricing-circle"></div><img src="images/logosivut.svg" loading="lazy" alt="" class="pricing-image">
               </a>
               <h3 class="pricing-type">Logo + kotisivut</h3><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390bb2281ed7f01a39de227_all_in_logo-cropped.svg" loading="lazy" alt="" class="service-title">
-              <div class="pricing-title no-margin">€ 499.00 <span class="alv">+ alv. 24%</span></div>
+              <div class="pricing-title no-margin">€ 599.00 <span class="alv">+ alv. 24%</span></div>
               <div class="pricing-features">
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
                   <div class="feature">Logon suunnittelu</div>
@@ -544,8 +544,8 @@
         </div>
         <div class="margin-70px">
           <div class="w-layout-grid client-grid">
-            <div id="w-node-_644b08bb-2928-540c-1c09-cf11f878c589-ded6061f" class="client-card">
-              <a href="referenssi/finhem-oy" class="client-image w-inline-block"><img src="images/mockup-finhem.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-finhem.webp 500w, images/mockup-finhem.webp 800w, images/mockup-finhem.webp 1080w, images/mockup-finhem.webp 1600w" alt="FINHEM Oy verkkosivut tietokoneella" class="client-image"></a>
+            <div id="w-node-_485b5f3a-b728-dec4-f4da-48a0512454e2-512454e1" class="client-card">
+              <a href="referenssi/finhem-oy" class="client-image w-inline-block"><img src="images/mockup-finhem.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-finhem-p-500.webp 500w, images/mockup-finhem-p-800.webp 800w, images/mockup-finhem-p-1080.webp 1080w, images/mockup-finhem.webp 1600w" alt="FINHEM Oy verkkosivut tietokoneella" class="client-image"></a>
               <div class="client-content add-shadow">
                 <div class="category-felx">
                   <a href="referenssi/finhem-oy" class="category-tag">03/2024</a>
@@ -563,15 +563,15 @@
                 </div>
               </div>
             </div>
-            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5439b-ded6061f" class="client-card">
-              <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-helsinginkulta.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-helsinginkulta-p-500.webp 500w, images/mockup-helsinginkulta-p-800.webp 800w, images/mockup-helsinginkulta-p-1080.webp 1080w, images/mockup-helsinginkulta-p-1600.webp 1600w, images/mockup-helsinginkulta.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Helsingin Kullan verkkosivut." class="client-image"></a>
+            <div id="w-node-_485b5f3a-b728-dec4-f4da-48a0512454f2-512454e1" class="client-card">
+              <a href="referenssi/suutarilan-autohuoltopiste-oy" class="client-image w-inline-block"><img src="images/mockup-sahp.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-sahp.webp 500w, images/mockup-sahp.webp 800w, images/mockup-sahp.webp 1080w, images/mockup-sahp.webp 1600w" alt="Suutarilan Autohuoltopiste verkkosivut" class="client-image"></a>
               <div class="client-content add-shadow">
                 <div class="category-felx">
-                  <a href="#" class="category-tag">10/2023</a>
+                  <a href="referenssi/suutarilan-autohuoltopiste-oy" class="category-tag">03/2024</a>
                 </div>
-                <a href="referenssi/helsingin-kulta" class="client-title">Helsingin Kulta</a>
+                <a href="referenssi/suutarilan-autohuoltopiste-oy" class="client-title">Suutarilan Autohuoltopiste Oy</a>
                 <div class="margin-20px">
-                  <a href="referenssi/helsingin-kulta" class="button-line w-inline-block">
+                  <a href="referenssi/suutarilan-autohuoltopiste-oy" class="button-line w-inline-block">
                     <div>
                       <div>Lue lisää</div>
                       <div class="button-line-button">
@@ -592,7 +592,7 @@
           <div class="top-divider">
             <div class="category-tag _2">Ole meihin yhteydessä!<br></div>
           </div>
-          <h3 class="display-1">Olemme valmiina hommiin!<strong><br></strong></h3>
+          <h3 class="display-1 larger">Olemme valmiina hommiin!<strong><br></strong></h3>
           <div class="margin-40px">
             <p class="subhead">Luodaan jotain ainutlaatuista.<br></p>
           </div>
@@ -614,7 +614,7 @@
           <div class="footer-grid">
             <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c4996-f17c497c"><img src="images/ndm-cropped.png" loading="lazy" width="70" sizes="(max-width: 479px) 100vw, 140px" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w" class="logo-footer">
               <div class="margin-30px">
-                <p class="paragraph-footer">Nords on suomalainen brändäys ja digitoimisto sitoutunut tuottamaan vain ja ainoastaan markkinoiden huippu laatua.<br></p>
+                <p class="paragraph-footer">Visioi. Luo. Saavuta.</p>
               </div>
               <div class="margin-30px">
                 <div class="navigation-flex">
