--- a/referenssi/helsingin-kulta.html
+++ b/referenssi/helsingin-kulta.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Mar 29 2024 10:50:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Mar 30 2024 10:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded606e2" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -120,6 +120,7 @@
             <p>Helsingin Kulta on erikoistunut kullan ja muiden jalometallien osto- ja myyntiliiketoimintaan. Loimme heille verkkosivut, jotka heijastavat heidän ammattitaitoaan ja luotettavuuttaan. Yhteistyömme Helsingin Kullan kanssa on ollut menestyksekäs, ja olemme iloisia siitä, että olemme voineet auttaa heitä vahvistamaan digitaalista läsnäoloaan ja laajentamaan asiakaskuntaansa.</p>
             <p>Pääset tutustumaan yrityksen sivuihin <a href="https://www.helsinginkulta.fi" target="_blank">tästä!</a>
             </p>
+            <p>Jos kiinnostuit tai haluat lisätietoja palveluistamme, ota rohkeasti yhteyttä!</p>
           </div>
         </div>
       </div>
@@ -142,15 +143,15 @@
           </div>
           <div class="margin-40px">
             <div class="w-layout-grid client-grid">
-              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f95-ded606e2" class="client-card">
-                <a href="../referenssi/valaistus-mk-oy" class="client-image w-inline-block"><img src="../images/mockup-valaistusmk.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/mockup-valaistusmk-p-500.webp 500w, ../images/mockup-valaistusmk-p-800.webp 800w, ../images/mockup-valaistusmk-p-1080.webp 1080w, ../images/mockup-valaistusmk-p-1600.webp 1600w, ../images/mockup-valaistusmk.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Valaistus MK:n verkkosivut." class="client-image"></a>
+              <div id="w-node-_485b5f3a-b728-dec4-f4da-48a0512454e2-512454e1" class="client-card">
+                <a href="../referenssi/finhem-oy" class="client-image w-inline-block"><img src="../images/mockup-finhem.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/mockup-finhem-p-500.webp 500w, ../images/mockup-finhem-p-800.webp 800w, ../images/mockup-finhem-p-1080.webp 1080w, ../images/mockup-finhem.webp 1600w" alt="FINHEM Oy verkkosivut tietokoneella" class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
-                    <a href="#" class="category-tag">09/2023</a>
+                    <a href="../referenssi/finhem-oy" class="category-tag">03/2024</a>
                   </div>
-                  <a href="../referenssi/valaistus-mk-oy" class="client-title">Valaistus MK Oy</a>
+                  <a href="../referenssi/finhem-oy" class="client-title">FINHEM Oy</a>
                   <div class="margin-20px">
-                    <a href="../referenssi/valaistus-mk-oy" class="button-line w-inline-block">
+                    <a href="../referenssi/finhem-oy" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
@@ -161,15 +162,15 @@
                   </div>
                 </div>
               </div>
-              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f85-ded606e2" class="client-card">
-                <a href="../referenssi/lannentilan-leipomo" class="client-image w-inline-block"><img src="../images/lannentilan-leipomo-mockup.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/lannentilan-leipomo-mockup-p-500.webp 500w, ../images/lannentilan-leipomo-mockup-p-800.webp 800w, ../images/lannentilan-leipomo-mockup-p-1080.webp 1080w, ../images/lannentilan-leipomo-mockup-p-1600.webp 1600w, ../images/lannentilan-leipomo-mockup.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Lännentilan leipomon verkkosivut." class="client-image"></a>
+              <div id="w-node-_485b5f3a-b728-dec4-f4da-48a0512454f2-512454e1" class="client-card">
+                <a href="../referenssi/suutarilan-autohuoltopiste-oy" class="client-image w-inline-block"><img src="../images/mockup-sahp.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/mockup-sahp.webp 500w, ../images/mockup-sahp.webp 800w, ../images/mockup-sahp.webp 1080w, ../images/mockup-sahp.webp 1600w" alt="Suutarilan Autohuoltopiste verkkosivut" class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
-                    <a href="#" class="category-tag">08/2023</a>
+                    <a href="../referenssi/suutarilan-autohuoltopiste-oy" class="category-tag">03/2024</a>
                   </div>
-                  <a href="../referenssi/lannentilan-leipomo" class="client-title">Lännentilan Leipomo Oy</a>
+                  <a href="../referenssi/suutarilan-autohuoltopiste-oy" class="client-title">Suutarilan Autohuoltopiste Oy</a>
                   <div class="margin-20px">
-                    <a href="../referenssi/lannentilan-leipomo" class="button-line w-inline-block">
+                    <a href="../referenssi/suutarilan-autohuoltopiste-oy" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
@@ -191,7 +192,7 @@
           <div class="top-divider">
             <div class="category-tag _2">Ole meihin yhteydessä!<br></div>
           </div>
-          <h3 class="display-1">Olemme valmiina hommiin!</h3>
+          <h3 class="display-1 larger">Olemme valmiina hommiin!</h3>
           <div class="margin-40px">
             <p class="subhead">Luodaan jotain ainutlaatuista.</p>
           </div>
@@ -213,7 +214,7 @@
           <div class="footer-grid">
             <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c4996-f17c497c"><img src="../images/ndm-cropped.png" loading="lazy" width="70" sizes="(max-width: 479px) 100vw, 140px" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." srcset="../images/ndm-cropped-p-500.png 500w, ../images/ndm-cropped-p-800.png 800w, ../images/ndm-cropped-p-1080.png 1080w, ../images/ndm-cropped-p-1600.png 1600w, ../images/ndm-cropped-p-2000.png 2000w, ../images/ndm-cropped-p-2600.png 2600w, ../images/ndm-cropped-p-3200.png 3200w" class="logo-footer">
               <div class="margin-30px">
-                <p class="paragraph-footer">Nords on suomalainen brändäys ja digitoimisto sitoutunut tuottamaan vain ja ainoastaan markkinoiden huippulaatua.</p>
+                <p class="paragraph-footer">Visioi. Luo. Saavuta.</p>
               </div>
               <div class="margin-30px">
                 <div class="navigation-flex">
