--- a/referenssi/henri-kontkin.html
+++ b/referenssi/henri-kontkin.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><!--  Last Published: Sat Mar 30 2024 10:53:51 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="66068748b796461e92b665c9" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
+<html data-wf-page="6607eb598efbfed2be55c007" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>FINHEM Oy</title>
-  <meta content="FINHEM Oy" property="og:title">
-  <meta content="FINHEM Oy" property="twitter:title">
+  <title>Henri Kontkin</title>
+  <meta content="Henri Kontkin" property="og:title">
+  <meta content="Henri Kontkin" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/components.css" rel="stylesheet" type="text/css">
@@ -16,7 +16,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.jpg" rel="apple-touch-icon">
-  <link href="https://www.nords.fi/referenssi/finhem-oy" rel="canonical">
+  <link href="https://www.nords.fi/referenssi/henri-kontkin" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-PSLMFQDWYR');</script>
   <meta name="robots" content="noindex">
@@ -92,14 +92,14 @@
     <div id="up" class="hero inner _2">
       <div class="container">
         <div class="hero-grid _2">
-          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f56-92b665c9" class="part-2 center">
+          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f56-be55c007" class="part-2 center">
             <div class="hero-flex-center">
-              <h1 class="hero-display smaller">FINHEM Oy</h1>
+              <h1 class="hero-display">Henri Kontkin</h1>
             </div>
           </div>
-          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f5a-92b665c9" class="part-1 _2">
+          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f5a-be55c007" class="part-1 _2">
             <div class="hero-flex-center left _3">
-              <p class="paragraph-1 second">03/2024</p>
+              <p class="paragraph-1 second">10/2023</p>
             </div>
           </div>
         </div>
@@ -113,14 +113,13 @@
     <div class="section">
       <div class="container">
         <div class="blog-rich-text">
-          <div class="photo-animation-main"><img src="../images/mockup-finhem.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/mockup-finhem-p-500.webp 500w, ../images/mockup-finhem-p-800.webp 800w, ../images/mockup-finhem-p-1080.webp 1080w, ../images/mockup-finhem.webp 1600w" alt="FINHEM Oy verkkosivut tietokoneella" class="photo">
+          <div class="photo-animation-main"><img src="../images/mockup-henri-kontkin.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/mockup-henri-kontkin.webp 500w, ../images/mockup-henri-kontkin.webp 800w, ../images/mockup-henri-kontkin.webp 1080w, ../images/mockup-henri-kontkin.webp 1600w" alt="Henri Kontkin verkkosivut" class="photo">
             <div class="absolute-background"></div>
           </div>
           <div class="margin-50px w-richtext">
-            <p>FINHEM Oy on Uudenmaan alueella toimiva paikallinen perheyritys, joka tarjoaa monipuolisia kodin palveluita. Yrityksen tavoitteena on tarjota asiakkailleen helppo ja vaivaton kokemus, jossa palvelumme laatu ja asiakastyytyväisyys ovat aina etusijalla.</p>
-            <p>Loimme heille verkkosivut, jotka heijastavat heidän laadukasta ja ammattitaitoista palvelua rakennusalalla. Yhteistyömme FINHEM Oy:n kanssa on ollut menestyksekäs, ja olemme iloisia siitä, että olemme voineet auttaa heitä vahvistamaan digitaalista läsnäoloaan.</p>
-            <p>Evästekyselyt on implementoitu käyttäen alalla vallitsevaa <a href="https://www.cookiebot.com/en/cookie-consent-solution/" target="_blank">Cookiebot</a>-integraatiota, mikä takaa, että sivusto on täysin yhteensopiva voimassa olevien tietosuojamääräysten kanssa.<br></p>
-            <p>Pääset tutustumaan yrityksen sivuihin <a href="https://www.finhem.fi" target="_blank">tästä!</a>
+            <p>Henri Kontkin on Järvenpään kaupunginvaltuutettu, kaupunginhallituksen varajäsen sekä Keski-Uudenmaan hyvinvointialueen varavaltuutettu. Hän on omistautunut edistämään alueensa asukkaiden hyvinvointia ja toimimaan aktiivisesti kuntansa kehityksen puolesta.</p>
+            <p>Henrille luotiin dynaamiset verkkosivut, jotka antavat hänelle mahdollisuuden vaikuttaa ja jakaa viestiään tehokkaasti. Sivustolle integroitiin interaktiivinen blogi, jonka avulla Henri voi välittää seuraajilleen ajankohtaisia uutisia, ajatuksiaan sekä muita mielenkiintoisia sisältöjä, jotka liittyvät hänen poliittiseen toimintaansa ja alueensa asioihin.</p>
+            <p>Pääset tutustumaan Henrin sivuihin <a href="https://www.henrikontkin.fi" target="_blank">tästä!</a>
             </p>
             <p>Jos kiinnostuit tai haluat lisätietoja palveluistamme, ota rohkeasti yhteyttä!</p>
           </div>
@@ -145,15 +144,15 @@
           </div>
           <div class="margin-40px">
             <div class="w-layout-grid client-grid">
-              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f95-92b665c9" class="client-card">
-                <a href="../referenssi/suutarilan-autohuoltopiste-oy" class="client-image w-inline-block"><img src="../images/mockup-sahp.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 47vw, (max-width: 1439px) 43vw, 560px" srcset="../images/mockup-sahp.webp 500w, ../images/mockup-sahp.webp 800w, ../images/mockup-sahp.webp 1080w, ../images/mockup-sahp.webp 1600w" alt="Suutarilan Autohuoltopiste verkkosivut" class="client-image"></a>
+              <div id="w-node-_485b5f3a-b728-dec4-f4da-48a0512454e2-512454e1" class="client-card">
+                <a href="../referenssi/finhem-oy" class="client-image w-inline-block"><img src="../images/mockup-finhem.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/mockup-finhem-p-500.webp 500w, ../images/mockup-finhem-p-800.webp 800w, ../images/mockup-finhem-p-1080.webp 1080w, ../images/mockup-finhem.webp 1600w" alt="FINHEM Oy verkkosivut tietokoneella" class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
-                    <a href="../referenssi/suutarilan-autohuoltopiste-oy" class="category-tag">03/2024</a>
+                    <a href="../referenssi/finhem-oy" class="category-tag">03/2024</a>
                   </div>
-                  <a href="../referenssi/suutarilan-autohuoltopiste-oy" class="client-title">Suutarilan Autohuoltopiste Oy</a>
+                  <a href="../referenssi/finhem-oy" class="client-title">FINHEM Oy</a>
                   <div class="margin-20px">
-                    <a href="../referenssi/suutarilan-autohuoltopiste-oy" class="button-line w-inline-block">
+                    <a href="../referenssi/finhem-oy" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
@@ -164,15 +163,15 @@
                   </div>
                 </div>
               </div>
-              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f85-92b665c9" class="client-card">
-                <a href="../referenssi/lannentilan-leipomo" class="client-image w-inline-block"><img src="../images/lannentilan-leipomo-mockup.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/lannentilan-leipomo-mockup-p-500.webp 500w, ../images/lannentilan-leipomo-mockup-p-800.webp 800w, ../images/lannentilan-leipomo-mockup-p-1080.webp 1080w, ../images/lannentilan-leipomo-mockup-p-1600.webp 1600w, ../images/lannentilan-leipomo-mockup.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Lännentilan leipomon verkkosivut." class="client-image"></a>
+              <div id="w-node-_485b5f3a-b728-dec4-f4da-48a0512454f2-512454e1" class="client-card">
+                <a href="../referenssi/suutarilan-autohuoltopiste-oy" class="client-image w-inline-block"><img src="../images/mockup-sahp.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/mockup-sahp.webp 500w, ../images/mockup-sahp.webp 800w, ../images/mockup-sahp.webp 1080w, ../images/mockup-sahp.webp 1600w" alt="Suutarilan Autohuoltopiste verkkosivut" class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
-                    <a href="#" class="category-tag">08/2023</a>
+                    <a href="../referenssi/suutarilan-autohuoltopiste-oy" class="category-tag">03/2024</a>
                   </div>
-                  <a href="../referenssi/lannentilan-leipomo" class="client-title">Lännentilan Leipomo Oy</a>
+                  <a href="../referenssi/suutarilan-autohuoltopiste-oy" class="client-title">Suutarilan Autohuoltopiste Oy</a>
                   <div class="margin-20px">
-                    <a href="../referenssi/lannentilan-leipomo" class="button-line w-inline-block">
+                    <a href="../referenssi/suutarilan-autohuoltopiste-oy" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
