--- a/referenssi/suutarilan-autohuoltopiste-oy.html
+++ b/referenssi/suutarilan-autohuoltopiste-oy.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><!--  Last Published: Fri Mar 29 2024 10:50:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Mar 30 2024 10:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded606d0" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Hautaustoimisto Rauha Oy</title>
-  <meta content="Hautaustoimisto Rauha Oy" property="og:title">
-  <meta content="Hautaustoimisto Rauha Oy" property="twitter:title">
+  <title>Suutarilan Autohuoltopiste Oy</title>
+  <meta content="Suutarilan Autohuoltopiste Oy" property="og:title">
+  <meta content="Suutarilan Autohuoltopiste Oy" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/components.css" rel="stylesheet" type="text/css">
@@ -16,7 +16,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.jpg" rel="apple-touch-icon">
-  <link href="https://www.nords.fi/referenssi/hautaustoimisto-rauha-oy" rel="canonical">
+  <link href="https://www.nords.fi/referenssi/suutarilan-autohuoltopiste-oy" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-PSLMFQDWYR');</script>
   <meta name="robots" content="noindex">
@@ -94,12 +94,12 @@
         <div class="hero-grid _2">
           <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f56-ded606d0" class="part-2 center">
             <div class="hero-flex-center">
-              <h1 class="hero-display hautaus-toimisto-rauha-oy">Hautaustoimisto Rauha Oy</h1>
+              <h1 class="hero-display smaller">Suutarilan Autohuoltopiste Oy</h1>
             </div>
           </div>
           <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f5a-ded606d0" class="part-1 _2">
             <div class="hero-flex-center left _3">
-              <p class="paragraph-1 second">11/2023</p>
+              <p class="paragraph-1 second">03/2024</p>
             </div>
           </div>
         </div>
@@ -113,13 +113,16 @@
     <div class="section">
       <div class="container">
         <div class="blog-rich-text">
-          <div class="photo-animation-main"><img src="../images/mockup-rauhanhautaus.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/mockup-rauhanhautaus-p-500.webp 500w, ../images/mockup-rauhanhautaus-p-800.webp 800w, ../images/mockup-rauhanhautaus-p-1080.webp 1080w, ../images/mockup-rauhanhautaus-p-1600.webp 1600w, ../images/mockup-rauhanhautaus.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Hautaustoimisto Rauha Oy:n verkkosivut." class="photo">
+          <div class="photo-animation-main"><img src="../images/mockup-sahp.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/mockup-sahp.webp 500w, ../images/mockup-sahp.webp 800w, ../images/mockup-sahp.webp 1080w, ../images/mockup-sahp.webp 1600w" alt="Suutarilan Autohuoltopiste verkkosivut" class="photo">
             <div class="absolute-background"></div>
           </div>
           <div class="margin-50px w-richtext">
-            <p>Hautaustoimisto Rauha Oy on perheyritys, joka tarjoaa kattavia hautauspalveluita. Loimme heille verkkosivut, jotka heijastavat heidän kunnioittavaa ja huomaavaista palvelua vaikeina hetkinä. Yhteistyömme Hautaustoimisto Rauha Oy:n kanssa on ollut menestyksekäs, ja olemme iloisia siitä, että olemme voineet auttaa heitä vahvistamaan digitaalista läsnäoloaan.</p>
-            <p>Pääset tutustumaan yrityksen sivuihin <a href="https://www.rauhanhautaus.fi" target="_blank">tästä!</a>
+            <p>Suutarilan Autohuoltopiste Oy on Helsingin alueella toimiva yritys, joka tarjoaa laadukkaat ja ammattitaitoiset ajoneuvon huolto- ja korjauspalvelut. Yrityksen tavoitteena on varmistaa asiakkaiden ajoneuvojen turvallisuus ja luotettavuus.</p>
+            <p>Tiimimme loi heille verkkosivut ja logon, jotka yhdessä tuovat yrityksen verkkoon raikkaalla ja ammattimaisella ilmeellä. Verkkosivusto on toteutettu monikielisenä, mikä mahdollistaa sen saavutettavuuden laajalle potentiaalisten asiakkaiden joukolle. Näin ollen asiakkaat eri kielialueilla voivat helposti löytää tarvitsemansa tiedot ja palvelut.</p>
+            <p>Evästekyselyt on integroitu alan standardin <a href="https://www.cookiebot.com/en/cookie-consent-solution/" target="_blank">Cookiebotin</a> avulla, mikä varmistaa sivuston täydellisen yhteensopivuuden voimassa olevien tietosuojamääräysten kanssa.<br></p>
+            <p>Pääset tutustumaan yrityksen sivuihin <a href="https://www.sahp.fi" target="_blank">tästä!</a>
             </p>
+            <p>Jos kiinnostuit tai haluat lisätietoja palveluistamme, ota rohkeasti yhteyttä!<br></p>
           </div>
         </div>
       </div>
@@ -143,14 +146,14 @@
           <div class="margin-40px">
             <div class="w-layout-grid client-grid">
               <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f95-ded606d0" class="client-card">
-                <a href="../referenssi/valaistus-mk-oy" class="client-image w-inline-block"><img src="../images/mockup-valaistusmk.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/mockup-valaistusmk-p-500.webp 500w, ../images/mockup-valaistusmk-p-800.webp 800w, ../images/mockup-valaistusmk-p-1080.webp 1080w, ../images/mockup-valaistusmk-p-1600.webp 1600w, ../images/mockup-valaistusmk.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Valaistus MK:n verkkosivut." class="client-image"></a>
+                <a href="../referenssi/finhem-oy" class="client-image w-inline-block"><img src="../images/mockup-finhem.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/mockup-finhem-p-500.webp 500w, ../images/mockup-finhem-p-800.webp 800w, ../images/mockup-finhem-p-1080.webp 1080w, ../images/mockup-finhem.webp 1600w" alt="FINHEM Oy verkkosivut tietokoneella" class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
-                    <a href="#" class="category-tag">09/2023</a>
+                    <a href="#" class="category-tag">03/2024</a>
                   </div>
-                  <a href="../referenssi/valaistus-mk-oy" class="client-title">Valaistus MK Oy</a>
+                  <a href="../referenssi/finhem-oy" class="client-title">FINHEM Oy</a>
                   <div class="margin-20px">
-                    <a href="../referenssi/valaistus-mk-oy" class="button-line w-inline-block">
+                    <a href="../referenssi/finhem-oy" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
@@ -191,7 +194,7 @@
           <div class="top-divider">
             <div class="category-tag _2">Ole meihin yhteydessä!<br></div>
           </div>
-          <h3 class="display-1">Olemme valmiina hommiin!</h3>
+          <h3 class="display-1 larger">Olemme valmiina hommiin!</h3>
           <div class="margin-40px">
             <p class="subhead">Luodaan jotain ainutlaatuista.</p>
           </div>
@@ -213,7 +216,7 @@
           <div class="footer-grid">
             <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c4996-f17c497c"><img src="../images/ndm-cropped.png" loading="lazy" width="70" sizes="(max-width: 479px) 100vw, 140px" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." srcset="../images/ndm-cropped-p-500.png 500w, ../images/ndm-cropped-p-800.png 800w, ../images/ndm-cropped-p-1080.png 1080w, ../images/ndm-cropped-p-1600.png 1600w, ../images/ndm-cropped-p-2000.png 2000w, ../images/ndm-cropped-p-2600.png 2600w, ../images/ndm-cropped-p-3200.png 3200w" class="logo-footer">
               <div class="margin-30px">
-                <p class="paragraph-footer">Nords on suomalainen brändäys ja digitoimisto sitoutunut tuottamaan vain ja ainoastaan markkinoiden huippulaatua.</p>
+                <p class="paragraph-footer">Visioi. Luo. Saavuta.</p>
               </div>
               <div class="margin-30px">
                 <div class="navigation-flex">
