--- a/referenssit.html
+++ b/referenssit.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Mar 29 2024 10:50:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Mar 30 2024 10:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded6074d" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -128,7 +128,7 @@
           <div class="margin-bottom-80px">
             <div class="w-layout-grid client-grid">
               <div id="w-node-a5804b4c-ec13-71fd-6d04-6df09bbd79f5-ded6074d" class="client-card">
-                <a href="referenssi/finhem-oy" class="client-image w-inline-block"><img src="images/mockup-finhem.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-finhem.webp 500w, images/mockup-finhem.webp 800w, images/mockup-finhem.webp 1080w, images/mockup-finhem.webp 1600w" alt="FINHEM Oy verkkosivut tietokoneella" class="client-image"></a>
+                <a href="referenssi/finhem-oy" class="client-image w-inline-block"><img src="images/mockup-finhem.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-finhem-p-500.webp 500w, images/mockup-finhem-p-800.webp 800w, images/mockup-finhem-p-1080.webp 1080w, images/mockup-finhem.webp 1600w" alt="FINHEM Oy verkkosivut tietokoneella" class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
                     <a href="referenssi/finhem-oy" class="category-tag">03/2024</a>
@@ -147,14 +147,14 @@
                 </div>
               </div>
               <div id="w-node-_85698372-c768-79a0-e56b-21e54ad62dd6-ded6074d" class="client-card">
-                <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-rauhanhautaus.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-rauhanhautaus-p-500.webp 500w, images/mockup-rauhanhautaus-p-800.webp 800w, images/mockup-rauhanhautaus-p-1080.webp 1080w, images/mockup-rauhanhautaus-p-1600.webp 1600w, images/mockup-rauhanhautaus.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Hautaustoimisto Rauha Oy:n verkkosivut." class="client-image"></a>
+                <a href="referenssi/suutarilan-autohuoltopiste-oy" class="client-image w-inline-block"><img src="images/mockup-sahp.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-sahp.webp 500w, images/mockup-sahp.webp 800w, images/mockup-sahp.webp 1080w, images/mockup-sahp.webp 1600w" alt="Suutarilan Autohuoltopiste verkkosivut" class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
-                    <a href="#" class="category-tag">11/2023</a>
+                    <a href="#" class="category-tag">03/2024</a>
                   </div>
-                  <a href="referenssi/hautaustoimisto-rauha-oy" class="client-title">Hautaustoimisto Rauha Oy</a>
+                  <a href="referenssi/suutarilan-autohuoltopiste-oy" class="client-title">Suutarilan Autohuoltopiste Oy</a>
                   <div class="margin-20px">
-                    <a href="referenssi/hautaustoimisto-rauha-oy" class="button-line w-inline-block">
+                    <a href="referenssi/suutarilan-autohuoltopiste-oy" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
@@ -174,6 +174,25 @@
                   <a href="referenssi/helsingin-kulta" class="client-title">Helsingin Kulta</a>
                   <div class="margin-20px">
                     <a href="referenssi/helsingin-kulta" class="button-line w-inline-block">
+                      <div>
+                        <div>Lue lisää</div>
+                        <div class="button-line-button">
+                          <div class="button-absolute-line"></div>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div id="w-node-_1cdb26b0-92bd-0299-8612-912423922c2c-ded6074d" class="client-card">
+                <a href="referenssi/henri-kontkin" class="client-image w-inline-block"><img src="images/mockup-henri-kontkin.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-henri-kontkin.webp 500w, images/mockup-henri-kontkin.webp 800w, images/mockup-henri-kontkin.webp 1080w, images/mockup-henri-kontkin.webp 1600w" alt="Henri Kontkin verkkosivut" class="client-image"></a>
+                <div class="client-content add-shadow">
+                  <div class="category-felx">
+                    <a href="referenssi/henri-kontkin" class="category-tag">10/2023</a>
+                  </div>
+                  <a href="referenssi/henri-kontkin" class="client-title">Henri Kontkin</a>
+                  <div class="margin-20px">
+                    <a href="referenssi/henri-kontkin" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
@@ -300,7 +319,7 @@
               </div>
             </div>
           </div>
-          <h2 class="display-4 text-centered">Voit tutustua myös logo referensseihin klikkamalla <a href="https://www.nords-logot.fi/" target="_blank">tästä</a>!</h2>
+          <h2 class="display-4 text-centered">Voit tutustua myös logo referensseihin klikkamalla <a href="https://logo.nords.fi/" target="_blank">tästä</a>!</h2>
         </div>
       </div>
     </section>
@@ -310,7 +329,7 @@
           <div class="top-divider">
             <div class="category-tag _2">Ole meihin yhteydessä!<br></div>
           </div>
-          <h3 class="display-1">Olemme valmiina hommiin!</h3>
+          <h3 class="display-1 larger">Olemme valmiina hommiin!</h3>
           <div class="margin-40px">
             <p class="subhead">Luodaan jotain ainutlaatuista.</p>
           </div>
@@ -332,7 +351,7 @@
           <div class="footer-grid">
             <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c4996-f17c497c"><img src="images/ndm-cropped.png" loading="lazy" width="70" sizes="(max-width: 479px) 100vw, 140px" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w" class="logo-footer">
               <div class="margin-30px">
-                <p class="paragraph-footer">Nords on suomalainen brändäys ja digitoimisto sitoutunut tuottamaan vain ja ainoastaan markkinoiden huippulaatua.</p>
+                <p class="paragraph-footer">Visioi. Luo. Saavuta.</p>
               </div>
               <div class="margin-30px">
                 <div class="navigation-flex">
