--- a/tietosuojaseloste.html
+++ b/tietosuojaseloste.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Mar 29 2024 10:50:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Mar 30 2024 10:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded60754" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -150,7 +150,7 @@
           <div class="top-divider">
             <div class="category-tag _2">Ole meihin yhteydessä!<br></div>
           </div>
-          <h3 class="display-1">Olemme valmiina hommiin!</h3>
+          <h3 class="display-1 larger">Olemme valmiina hommiin!</h3>
           <div class="margin-40px">
             <p class="subhead">Luodaan jotain ainutlaatuista.</p>
           </div>
@@ -172,7 +172,7 @@
           <div class="footer-grid">
             <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c4996-f17c497c"><img src="images/ndm-cropped.png" loading="lazy" width="70" sizes="(max-width: 479px) 100vw, 140px" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w" class="logo-footer">
               <div class="margin-30px">
-                <p class="paragraph-footer">Nords on suomalainen brändäys ja digitoimisto sitoutunut tuottamaan vain ja ainoastaan markkinoiden huippulaatua.</p>
+                <p class="paragraph-footer">Visioi. Luo. Saavuta.</p>
               </div>
               <div class="margin-30px">
                 <div class="navigation-flex">
